<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">渔虾乐</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading_waiting">加載中，请稍后...</string>
    <string name="rem_loginstatus">记住我的登陆状态</string>
    <string name="forget_password">忘记密码？</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="home">首页</string>
    <string name="tangkou">塘口</string>
    <string name="rizhi">日志</string>
    <string name="more">我的</string>
    <string name="add_tangkou">添加塘口</string>
    <string name="engine_center">设备数据中心</string>
    <string name="setengineparms">设置设备工作参数</string>
    <string name="calandsyncengine">传感器校准/设备时间同步</string>
    <string name="alertset">告警设置</string>
    <string name="manage_tangkou">塘口管理</string>
    <string name="add_tangkouengines">添加设备</string>
    <string name="warnings">警告</string>
    <string name="manage_tangkouinfo">塘口信息</string>
    <string name="manage_tangkouchangeinfo">塘口信息修改</string>
    <string name="manage_tangkou_addinfo">添加设备</string>
    <string name="manage_tangkou_delete">删除设备</string>
    <string name="change_info">个人信息修改</string>
    <string name="my_feedback">意见反馈</string>
    <string name="my_aboutsoftware">关于软件</string>
    <string name="breedinglog">养殖日志</string>
    <string name="title_activity_devic_faulte">DevicFaulteActivity</string>
    <string name="title_activity_devic_fault_model">DevicFaultModel</string>

</resources>